--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -100,7 +100,7 @@
                     </li>
 {% endcomment %}
                     <li class="tutorial">
-                        <a href="https://vendedorinternacional.net/ajuda.html" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
+                        <a href="/ajuda.html" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
                     <li class="dropdown">
